<resources>
    <string name="app_name">Foody</string>
    <string name="label_foody">Foody</string>
    <string name="label_log_in">Log in</string>
    <string name="label_yurii_alieksieiev_2021">Yurii Alieksieiev 2021</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_have_an_account">Have an account?</string>
    <string name="label_e_mail">E-Mail</string>
    <string name="label_password">Password</string>
    <string name="label_forgot_password">Forgot password?</string>
    <string name="label_close">Close</string>
    <string name="label_name">Name</string>
    <string name="label_surname">Surname</string>
    <string name="label_phone">Phone</string>
    <string name="label_i_want_to_cook">I want to cook</string>
    <string name="label_cook_about">Show information about being a cook</string>
    <string name="label_password_should_be">Password should be</string>
    <string name="label_at_least_8_characters">At least 8 characters</string>
    <string name="label_minimum_one_letter">Minimum one letter</string>
    <string name="label_minimum_one_number">Minimum one number</string>
    <string name="label_minimum_one_symbol">Minimum one symbol</string>
    <string name="label_must_not_empty">Must not be empty</string>
    <string name="label_wrong_credentials">Wrong credentials</string>
    <string name="label_ok">Ok</string>
    <string name="label_change_role">Change role</string>
    <string name="label_log_out">Log out</string>
    <string name="hint_confirmation_email">Please confirm your email.\nThe confirmation has been sent to your email</string>
    <string name="hint_confirmation_executor_role">Your cook request has been sent. \nPlease wait until the request will be approved</string>
    <string name="label_choose_role">Choose Role</string>
    <string name="label_client">Client</string>
    <string name="label_cook">Cook</string>
    <string name="label_administrator">Administrator</string>
    <string name="label_network_error">Network error\n%s</string>
    <string name="label_unknown_error">Unknown error\n%s</string>
    <string name="label_server_error">Server error\nResponse code:%d</string>
    <string name="label_email_is_already_used">This email is already used</string>
    <string name="label_got_it">got it</string>
    <string name="label_wrong_email">Wrong email</string>
    <string name="label_wrong_phone_format">Wrong phone</string>
    <string name="description_cook">You can become a cook. Your responsibilities will be about cooking and sending food to clients. Your request must be approved by the administration</string>
    <string name="hint_registration_done_client">Your registration has done. Please confirm your email. The confirmation link has been sent to %s.</string>
    <string name="hint_registration_done_cook">Your registration as a cook has done. Please confirm your email. The confirmation link has been sent to %s.</string>
    <string name="label_personal_information">Personal Information</string>
    <string name="label_help">Help</string>
    <string name="label_open_left_menu">Open left menu</string>
    <string name="label_products">Products</string>
    <string name="label_categories">Categories</string>
    <string name="label_requests">Requests</string>
    <string name="list_is_empty">List is empty</string>
    <string name="label_retry">Try again</string>
    <string name="label_price">Price: %s zl</string>
    <string name="label_product_price">%s zl</string>
    <string name="label_available">Available: %d</string>
    <string name="label_amount">Amount: %d</string>
    <string name="label_is_available">Available</string>
    <string name="label_is_unavailable">Unavailable</string>
    <string name="label_disabled">Disabled</string>
    <string name="label_add_product">Add product</string>
    <string name="label_select">Select</string>
    <string name="label_delete_items">Delete Products</string>
    <string name="label_delete_items_message">Are you sure to delete the selected products?</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="message_logout_confirmation">Are you sure to logout?</string>
    <string name="hint_product_name">Product name</string>
    <string name="hint_description">Description</string>
    <string name="hint_available">Available</string>
    <string name="hint_price">Price</string>
    <string name="hint_cooking_time">Cooking time</string>
    <string name="content_desc_increase">Button increase</string>
    <string name="content_desc_decrease">Button descrease</string>
    <string name="hint_url">Image url</string>
    <string name="error_select_image">Select image</string>
    <string name="error_enter_image_url">Enter image url</string>
    <string name="label_photo_uploading">Photo uploading</string>
    <string name="label_add">Add</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_external">External</string>
    <string name="label_internal">Internal</string>
    <string name="label_upload">Upload</string>
    <string name="label_images">Images</string>
    <string name="label_category">Category</string>
    <string name="label_active">Active</string>
    <string name="label_delete_image">Delete Image</string>
    <string name="message_delete_image_confirmation">Are you sure to delete image?</string>
    <string name="label_save">Save</string>
    <string name="error_no_photo">No photo</string>
    <string name="hint_items_are_removed">The items have been removed</string>
    <string name="label_create">Create</string>
    <string name="label_delete">Delete</string>
    <string name="label_search">Search</string>
    <string name="label_no_message">The error does not have any information</string>
    <string name="label_edit_category">Edit category</string>
    <string name="label_create_category">Create category</string>
    <string name="label_edit_product">Edit product</string>
    <string name="label_create_product">Create product</string>
    <string name="label_role">Role:</string>
    <string name="label_confirmed">confirmed</string>
    <string name="label_unconfirmed">unconfirmed</string>
    <string name="label_role_request">Role request</string>
    <string name="label_comfirm_role_request">Are you sure to accept the role request?</string>
    <string name="label_become_cook">Become a cook</string>
    <string name="label_what_would_you_like">What would you like?</string>
    <string name="content_description_back">Move back</string>
    <string name="content_description_cart">Open the cart</string>
    <string name="content_desc_price">Price icon</string>
    <string name="content_desc_cooking_time_icon">Cooking time icon</string>
    <string name="content_desc_rating">Raiting icon</string>
    <string name="label_description">Description</string>
    <string name="label_cost_breakdown">cost breakdown</string>
    <string name="label_count">Count</string>
    <string name="label_total">Total</string>
    <string name="label_total_number">Total: %.2f</string>
    <string name="label_order">Order</string>
    <string name="label_rating">%.1f%%</string>
    <string name="label_product_id">Product ID #%d</string>
    <string name="message_become_cook">You can become a cook. Your responsibily will be to take orders and cook. Do you want to become a cook?</string>
    <string name="message_you_became_cook">Congratulations! You have become a cook. Now wait utill the request will be approved by the administrar</string>
    <string name="label_start">Start</string>
    <string name="label_taking_order">Taking order</string>
    <string name="message_take_order_confirmation">Would you like to take the order?</string>
    <string name="label_order_detail">Order detail</string>
    <string name="label_take_order">Take order</string>
    <string name="label_order_detail_product_id">Product ID: #%s</string>
    <string name="label_order_detail_timestamp">Timestamp: %s</string>
    <string name="label_one">1</string>
    <string name="label_two">2</string>
    <string name="label_four">4</string>
    <string name="label_delivered">Delivered</string>
    <string name="label_finished">Finished</string>
    <string name="label_start_cooking">Start cooking</string>
    <string name="label_taking">Taking</string>
    <string name="label_cooking">Cooking</string>
    <string name="label_three">3</string>
    <string name="label_status">Status</string>
    <string name="label_change_order_status">Order status</string>
    <string name="message_change_order_status">Are you sure to change the status from %s to %s?</string>
    <string name="label_processing">processing</string>
    <string name="content_description_header_swipe">Header, swipe</string>
    <string name="content_description_arrow_upward">Arrow upward</string>
    <string name="content_description_give_feedback">Give feedback</string>
    <string name="label_how_have_you_enjoyed">How have you enjoyed?</string>
    <string name="label_rate">Rate</string>
    <string name="label_history">History</string>
    <string name="label_pending">Pending</string>
    <string name="label_estimated_time">Estimated time</string>
    <string name="label_remain_minutes">%d min</string>
</resources>