<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:contentDescription=""
        android:title="@string/label_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/filter_available"
        android:contentDescription=""
        android:title="@string/label_available"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/filter_active"
        android:contentDescription=""
        android:title="@string/label_active"
        android:checkable="true"
        app:showAsAction="never" />

    <item android:id="@+id/delete"
        android:title="@string/label_delete"
        android:visible="false"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_delete_24"/>

</menu>