<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_white_1">

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.Navy.Display1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/label_foody"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/sign_up"
            style="@style/Button.Rounded.NavyText.Display2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_sing_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintVertical_bias="0.7" />

        <TextView
            android:id="@+id/label_have_account"
            style="@style/TextAppearance.Gray.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_have_an_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up"
            app:layout_constraintVertical_bias="0.100000024" />

        <TextView
            android:id="@+id/log_in"
            style="@style/TextAppearance.Navy.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/label_log_in"
            app:layout_constraintBaseline_toBaselineOf="@id/label_have_account"
            app:layout_constraintStart_toEndOf="@id/label_have_account" />

        <TextView
            android:id="@+id/label_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_yurii_alieksieiev_2021"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_have_account"
            app:layout_constraintVertical_bias="0.93" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>