<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/line"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:background="@color/yellow"
            app:layout_constraintBottom_toBottomOf="@+id/one_symbol"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title" />

        <ImageView
            android:id="@+id/eight_characters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_check_circle_outline_24_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <ImageView
            android:id="@+id/one_letter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_check_circle_outline_24_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eight_characters" />

        <ImageView
            android:id="@+id/one_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_check_circle_outline_24_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/one_letter" />

        <ImageView
            android:id="@+id/one_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_check_circle_outline_24_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/one_number" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_password_should_be"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/label_at_least_8_characters"
            app:layout_constraintBottom_toBottomOf="@+id/eight_characters"
            app:layout_constraintStart_toEndOf="@+id/eight_characters"
            app:layout_constraintTop_toTopOf="@+id/eight_characters" />

        <TextView
            android:id="@+id/tv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/label_minimum_one_letter"
            app:layout_constraintBottom_toBottomOf="@+id/one_letter"
            app:layout_constraintStart_toEndOf="@+id/one_letter"
            app:layout_constraintTop_toTopOf="@+id/one_letter" />

        <TextView
            android:id="@+id/tv_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/label_minimum_one_number"
            app:layout_constraintBottom_toBottomOf="@+id/one_number"
            app:layout_constraintStart_toEndOf="@+id/one_number"
            app:layout_constraintTop_toTopOf="@+id/one_number" />

        <TextView
            android:id="@+id/tv_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/label_minimum_one_symbol"
            app:layout_constraintBottom_toBottomOf="@+id/one_symbol"
            app:layout_constraintStart_toEndOf="@+id/one_symbol"
            app:layout_constraintTop_toTopOf="@+id/one_symbol" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>