<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                app:layout_scrollFlags="scroll|enterAlways">

                <ImageButton
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="4dp"
                    android:layout_weight="0"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/content_description_back"
                    android:src="@drawable/ic_arrow_white_24" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_white_rounded"
                    android:drawableStart="@drawable/ic_search_24"
                    android:hint="@string/label_what_would_you_like"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="10dp"
                    android:singleLine="true" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="4dp"
                    android:layout_weight="0"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/content_description_cart"
                    android:src="@drawable/ic_baseline_shopping_cart_24" />
            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>


        <com.yurii.foody.ui.ListFragment
            android:id="@+id/list_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>